<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".MainActivity2_Nivel6">

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/total_score"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_Manzanas"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="449dp"
        android:text="@string/et_vidas"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="453dp"
        android:layout_toEndOf="@+id/textView_Manzanas"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageView_NumUno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="295dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="282dp"
        android:layout_toStartOf="@+id/imageView_NumDos"
        android:layout_toEndOf="@+id/imageView_NumUno"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/multiplicacion" />

    <ImageView
        android:id="@+id/imageView_NumDos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="295dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="208dp"
        android:layout_toStartOf="@+id/button_sumar"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number" />

    <Button
        android:id="@+id/button_sumar"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/fondoboton"
        android:onClick="Comparar"
        android:text="@string/boton_sumar"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
