<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView_Personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="88dp"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="294dp"
        android:layout_height="57dp"
        android:layout_below="@+id/imageView_Personaje"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/primary_dark"
        android:textColorHint="@color/primary_dark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/boton"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp"
        android:background="@drawable/fondoet"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:textColor="@color/primary_dark"
        android:textSize="18sp" />
</RelativeLayout>

